--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="/static/bootstrap.min.css" th:href="@{/bootstrap.min.css}" />
+    <title>Home Page</title>
+    <meta charset="utf-8"/>
 </head>
-<body>
-
+<body style="background-color: #d5d5d5">
+<div th:replace="fragments/header :: header">
+</div>
+<div class="container-fluid">
+    <div class="hero-unit m-5">
+        <h1><span th:text="${appName}"></span></h1>
+        <p>
+            Keep Your Revenues and Expenses Under Control!
+        </p>
+        <p>
+            <a th:href="@{/transaction}" class="btn btn-large btn-success">Start</a>
+        </p>
+    </div>
+</div>
+<div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
