--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <nav class="navbar navbar-inverse navbar-fixed-top" th:fragment="header">
+    <li class="nav navbar-nav">
+        <a class="nav navbar-link active"
+           href="/joke">Joke</a>
+    </li>
     <a class="nav navbar-brand a" href="#">Menu
         <span class="sr-only">(current)</span>
     </a>
@@ -10,6 +14,13 @@
             </li>
             <li class="nav navbar-link">
                 <a class="nav nav-link active" href="/transaction">Transaction</a>
+            </li>
+            <li class="nav navbar-link">
+                <a class="nav nav-link active" href="/register">Register</a>
+            </li>
+            <li class="nav navbar-link">
+                <a class="nav nav-link active"
+                   th:if="${#request.userPrincipal != null}" th:href="@{/logout}">Logout</a>
             </li>
         </ul>
     </div>
